<package>
  <name>dynamic_reconfigure</name>
  <version>1.5.14</version>
  <description brief="A system to allow node parameters to be changed without restarting the node.">
  This unary stack contains the dynamic_reconfigure package which provides a means to change
  node parameters at any time without having to restart the node.
  </description>
  <author>Blaise Gassend</author>
  <maintainer email="zklapow@willowgarage.com">Ze'ev Klapow</maintainer>
  <license>BSD</license>  
  <copyright>Willow Garage</copyright>
  <review status="unreviewed" notes=""/>
  <url>http://ros.org/wiki/dynamic_reconfigure</url>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

  <build_depend>boost</build_depend>
  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>langs-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>roscpp</run_depend>
</package>
